# NNEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: script.py
include/autograd/: Op.hpp  Tape.hpp  Tensor.hpp
include/autograd/ops/: AddBiasOp.hpp  LeakyReLUOp.hpp  MatMulOp.hpp  PyOp.hpp  ReLUOp.hpp
include/core/: DataLoader.hpp  JITGraph.hpp  Layer.hpp  Loss.hpp  Model.hpp  Module.hpp  Optimizer.hpp  Random.hpp  Regularizer.hpp  Types.hpp
include/core/loss/: Loss.hpp  MSELoss.hpp  SoftmaxCrossEntropyLoss.hpp
include/core/optimizer/: Adam.hpp  Optimizer.hpp  SGD.hpp
include/core/regularizer/: L2Regularizer.hpp  Regularizer.hpp
include/layers/: DenseLayer.hpp  LeakyReLULayer.hpp  ReLULayer.hpp  Sequential.hpp
include/losses/: MSELoss.hpp  SoftmaxCrossEntropyLoss.hpp
include/optimizers/: Adam.hpp  SGD.hpp
include/parametric/: DenseLayer.hpp  LeakyReLULayer.hpp  LogisticNeuron.hpp  ReLULayer.hpp  Sequential.hpp  SoftmaxLayer.hpp
include/regularizers/: L2Regularizer.hpp
nnengine/: __init__.py  compiler.py  module.py
src/: binding.cpp
src/autograd/ops/: AddBiasOp.cpp  LeakyReLUOp.cpp  MatMulOp.cpp  ReLUOp.cpp
src/core/: Model.cpp
src/layers/: DenseLayer.cpp
src/losses/: MSELoss.cpp  SoftmaxCrossEntropyLoss.cpp
src/optimizers/: Adam.cpp  SGD.cpp
src/parametric/: DenseLayer.cpp  LogisticNeuron.cpp  ReLULayer.cpp  SoftmaxLayer.cpp
src/regularizers/: L2Regularizer.cpp
