[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "nn-engine-core"
version = "0.1.2"
description = "A high-performance C++ parametric optimization backend for NNEngine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[tool.scikit-build]
cmake.version = ">=3.18"
wheel.install-dir = "."

[tool.cibuildwheel]
skip = "*-musllinux_*"